--- a/자료구조/자료구조.vcxproj.filters
+++ b/자료구조/자료구조.vcxproj.filters
@@ -259,5 +259,8 @@
     <ClCompile Include="2차원으로 만들기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="약수.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
