너의 평점은

--- a/자료구조/자료구조.vcxproj.filters
+++ b/자료구조/자료구조.vcxproj.filters
@@ -262,5 +262,8 @@
     <ClCompile Include="약수.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="너의 평점은.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
