--- a/자료구조/자료구조.vcxproj.filters
+++ b/자료구조/자료구조.vcxproj.filters
@@ -265,5 +265,8 @@
     <ClCompile Include="너의 평점은.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="색종이.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
